--- a/config.json
+++ b/config.json
@@ -2,6 +2,5 @@
 	"port": 3000,
 	"reportsPath": "./examples/",
 	"reportsExtension": "jade",
-	"templateEngine": "jade",
-	"dataprovidersPath": "./dataproviders"
+	"templateEngine": "jade"
 }
