--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "consolidate": "^0.11.0",
     "express": "^4.11.2",
     "jade": "^1.9.2",
     "lazy.js": "^0.4.0",
     "moment": "^2.9.0"
+  },
+  "optionalDependencies": {
+    "mssql": "^1.3.0"
   }
 }
